log
Mon Apr 27 02:30:59 PM UTC 2026: 
 tests:  1|8
total_score: 0/60
f13eb4c
Mon Apr 27 02:52:26 PM UTC 2026: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/60
f0dcf47
Mon Apr 27 03:50:26 PM UTC 2026: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/60
c55268f
Tue Apr 28 01:13:13 PM UTC 2026: 
 tests:  11|6
total_score: 15/60
0b17817
Tue Apr 28 01:48:39 PM UTC 2026: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  11|6
total_score: 15/60
f58084e
Tue Apr 28 01:49:32 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/60
779a3a0
Tue Apr 28 01:52:11 PM UTC 2026: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/60
cda35ad
Tue Apr 28 01:57:04 PM UTC 2026: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
3047e3b
Tue Apr 28 01:59:38 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f120bf4
Tue Apr 28 02:00:42 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
ef9b0d1
Tue Apr 28 02:01:43 PM UTC 2026: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
cade1c6
Tue Apr 28 02:05:43 PM UTC 2026: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/60
01edeca
Tue Apr 28 02:06:21 PM UTC 2026: 
 tests:  11|6
total_score: 15/60
a64279d
Tue Apr 28 02:08:18 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/60
4456594
Tue Apr 28 02:25:44 PM UTC 2026: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/60
72eaf86
Tue Apr 28 02:27:52 PM UTC 2026: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  15|4
total_score: 25/60
931cd94
Wed Apr 29 06:13:30 PM UTC 2026: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:257:25: error: implicit declaration of function ‘minimun’; did you mean ‘minimum’? [-Wimplicit-function-declaration]
  257 |         TreeNode* min = minimun(node->right);
      |                         ^~~~~~~
      |                         minimum
treemap.c:257:25: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
treemap.c:263:16: error: passing argument 1 of ‘remove’ from incompatible pointer type [-Wincompatible-pointer-types]
  263 |         remove(tree, min);
      |                ^~~~
      |                |
      |                TreeMap *
In file included from test.c:1:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdio.h:158:32: note: expected ‘const char *’ but argument is of type ‘TreeMap *’
  158 | extern int remove (const char *__filename) __THROW;
      |                    ~~~~~~~~~~~~^~~~~~~~~~
treemap.c:263:9: error: too many arguments to function ‘remove’
  263 |         remove(tree, min);
      |         ^~~~~~
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdio.h:158:12: note: declared here
  158 | extern int remove (const char *__filename) __THROW;
      |            ^~~~~~
c1587ab
Wed Apr 29 06:13:54 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:257:25: error: implicit declaration of function ‘minimun’; did you mean ‘minimum’? [-Wimplicit-function-declaration]
  257 |         TreeNode* min = minimun(node->right);
      |                         ^~~~~~~
      |                         minimum
treemap.c:257:25: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
a1fec41
